WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16628
ASSERTION FAILED: m_resizeLayer (running layout tests)
https://bugs.webkit.org/show_bug.cgi?id=16628
Summary
ASSERTION FAILED: m_resizeLayer (running layout tests)
Alexey Proskuryakov
Reported
2007-12-27 23:11:20 PST
run-webkit-tests fast/css/resize-corner-tracking.html fast/css/rgb-float.html ASSERTION FAILED: m_resizeLayer (/Users/ap/Safari/OpenSource/WebCore/page/EventHandler.cpp:1442 void WebCore::EventHandler::resizeLayerDestroyed()) The problematic test is the first one, clearly.
Attachments
Don't call resizeLayerDestroyed() if the document is being destroyed
(1.17 KB, patch)
2007-12-27 23:25 PST
,
mitz
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-12-27 23:15:42 PST
Should have run the tests...
mitz
Comment 2
2007-12-27 23:25:48 PST
Created
attachment 18140
[details]
Don't call resizeLayerDestroyed() if the document is being destroyed
Alexey Proskuryakov
Comment 3
2007-12-27 23:47:26 PST
Comment on
attachment 18140
[details]
Don't call resizeLayerDestroyed() if the document is being destroyed r=me
Matt Lilek
Comment 4
2007-12-28 00:00:36 PST
Mitz landed the fix in
r29011
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug