        Reviewed by Alexey Proskuryakov.

- fix http://bugs.webkit.org/show_bug.cgi?id=16628
          ASSERTION FAILED: m_resizeLayer (running layout tests)

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::~RenderLayer): Avoid calling
        EventHandler::resizeLayerDestroyed() if the document is being destroyed.



git-svn-id: svn://svn.chromium.org/blink/trunk@29011 bbb929c8-8fbe-4397-9dbb-9b2b20218538