third_party/WebKit/WebCore/rendering/RenderLayer.cpp
@@ -161,7 +161,7 @@ RenderLayer::RenderLayer(RenderObject* object)
 
 RenderLayer::~RenderLayer()
 {
-    if (inResizeMode()) {
+    if (inResizeMode() && !renderer()->documentBeingDestroyed()) {
         if (Frame* frame = renderer()->document()->frame())
             frame->eventHandler()->resizeLayerDestroyed();
     }
